open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: open-webui
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: open-webui
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: open-webui
    spec:
      containers:
      - name: open-webui
        # Get the commit tag for the image from here https://github.com/open-webui/open-webui/releases
        image: ghcr.io/open-webui/open-webui:git-1db8dec # 0.6.25 release https://github.com/orgs/open-webui/packages/container/package/open-webui
        # Ensure we run on a node with GPU available
        ports:
        - name: open-webui
          containerPort: 8080
        volumeMounts:
        - name: storage
          # Models are downloaded and stored in the root home directory
          mountPath: /app/backend/data 
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: open-webui-nfs-pvc
