open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: open-webui
  name: open-webui
  namespace: open-webui
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: open-webui
      port: 8080
      protocol: TCP
      targetPort: open-webui
  selector:
    app.kubernetes.io/name: open-webui
  sessionAffinity: None
  type: ClusterIP
