open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "1M"
    nginx.ingress.kubernetes.io/proxy-body-size: "256M"
    cert-manager.io/cluster-issuer: letsencryptcertmanager
  labels:
    app.kubernetes.io/name: open-webui
  name: open-webui
  namespace: open-webui
spec:
  ingressClassName: nginx
  rules:
    - host: open-webui.crobasaurusrex.ryanbeales.com
      http:
        paths:
          - backend:
              service:
                name: open-webui
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - open-webui.crobasaurusrex.ryanbeales.com
      secretName: open-webui-crobasaurusrex-ryanbeales-com-tls
